--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dist/"
   ],
   "scripts": {
-    "lint": "tslint \"src/**/*.ts\" --project tsconfig.json --type-check",
+    "lint": "tslint \"src/**/*.ts\" --project tsconfig.json",
     "build": "rm -rf dist/ && tsc",
     "specs": "jest --coverage",
     "test": "npm run -s lint && npm run -s build && npm run -s specs",
@@ -37,25 +37,25 @@
   },
   "homepage": "https://github.com/serviejs/servie-send",
   "devDependencies": {
-    "@types/jest": "^21.1.0",
+    "@types/jest": "^22.2.2",
     "@types/node": "^8.0.0",
-    "jest": "^21.0.0",
+    "jest": "^22.4.3",
     "rimraf": "^2.5.4",
-    "servie": "^0.2.5",
+    "servie": "^2.1.3",
     "throwback": "^2.0.0",
-    "ts-jest": "^21.0.0",
-    "tslint": "^5.0.0",
+    "ts-jest": "^22.4.2",
+    "tslint": "^5.9.1",
     "tslint-config-standard": "^7.0.0",
     "typescript": "^2.2.1"
   },
   "peerDependencies": {
-    "servie": "^0.2.0"
+    "servie": "^2.1.0"
   },
   "jest": {
     "transform": {
-      ".(ts|tsx)": "ts-jest/preprocessor.js"
+      ".(ts|tsx)": "ts-jest"
     },
-    "testRegex": "src/.*\\.(?:test|spec)\\.(ts|tsx|js)$",
+    "testRegex": "src/.*\\.(?:test|spec)\\.(tsx?|jsx?)$",
     "moduleFileExtensions": [
       "ts",
       "tsx",
