--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,14 @@
 {
   "compilerOptions": {
-    "target": "es5",
-    "lib": [
-      "es2015"
-    ],
+    "target": "es2015",
+    "lib": ["es2015"],
     "rootDir": "src",
     "outDir": "dist",
     "module": "commonjs",
     "moduleResolution": "node",
+    "strict": true,
     "declaration": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noImplicitReturns": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "strictNullChecks": true,
-    "removeComments": false,
     "sourceMap": true,
     "inlineSources": true
-  },
-  "include": [
-    "src/**/*",
-    "typings/**/*"
-  ]
+  }
 }
