--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "dist/"
   ],
   "scripts": {
+    "prettier": "prettier --write",
     "lint": "tslint \"src/**/*.ts\" --project tsconfig.json",
-    "build": "rm -rf dist/ && tsc",
+    "format": "npm run prettier -- .travis.yml README.md \"src/**/*.{js,ts}\"",
+    "build": "rimraf dist && tsc",
     "specs": "jest --coverage",
     "test": "npm run -s lint && npm run -s build && npm run -s specs",
-    "prepublish": "npm run build"
+    "prepare": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -36,30 +38,54 @@
     "url": "https://github.com/serviejs/servie-send/issues"
   },
   "homepage": "https://github.com/serviejs/servie-send",
-  "devDependencies": {
-    "@types/jest": "^23.3.2",
-    "@types/node": "^10.9.4",
-    "jest": "^23.6.0",
-    "rimraf": "^2.5.4",
-    "servie": "^3.0.0",
-    "throwback": "^3.0.0",
-    "ts-jest": "^23.1.4",
-    "tslint": "^5.9.1",
-    "tslint-config-standard": "^8.0.1",
-    "typescript": "^3.0.3"
-  },
-  "peerDependencies": {
-    "servie": ">=2.1 <4"
-  },
   "jest": {
+    "roots": [
+      "<rootDir>/src/"
+    ],
     "transform": {
-      ".(ts|tsx)": "ts-jest"
+      "\\.tsx?$": "ts-jest"
     },
-    "testRegex": "src/.*\\.(?:test|spec)\\.(tsx?|jsx?)$",
+    "testRegex": "(/__tests__/.*|\\.(test|spec))\\.(tsx?|jsx?)$",
     "moduleFileExtensions": [
       "ts",
       "tsx",
-      "js"
+      "js",
+      "jsx",
+      "json",
+      "node"
     ]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "npm run prettier",
+      "git add"
+    ]
+  },
+  "publishConfig": {
+    "access": "public"
+  },
+  "devDependencies": {
+    "@types/jest": "^24.0.13",
+    "@types/node": "^12.0.2",
+    "husky": "^2.3.0",
+    "jest": "^24.8.0",
+    "lint-staged": "^8.1.7",
+    "prettier": "^1.17.1",
+    "rimraf": "^2.5.4",
+    "servie": "^4.0.2",
+    "throwback": "^4.0.0",
+    "ts-jest": "^24.0.2",
+    "tslint": "^5.9.1",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-config-standard": "^8.0.1",
+    "typescript": "^3.4.5"
+  },
+  "peerDependencies": {
+    "servie": "^4.0.0"
   }
 }
